<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_cornered_stairs"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/picView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/image"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.PILL"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/genderEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/male"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/giorgi"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderEditText" />

    <TextView
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/ninidze"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/birthYearTextVeiw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameEditText" />

    <TextView
        android:id="@+id/birthYearTextVeiw"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/_2002"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/eMailEditText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText" />

    <TextView
        android:id="@+id/eMailEditText1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/giorgi_ninidze_btu_edu_ge"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/changeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthYearTextVeiw" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/proxima_extra_bold"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eMailEditText1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="139dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/proxima_extra_bold"
        android:text="@string/person_info"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/genderEditText"
        app:layout_constraintEnd_toEndOf="@+id/genderEditText"
        app:layout_constraintStart_toStartOf="@+id/genderEditText"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />
</androidx.constraintlayout.widget.ConstraintLayout>